# cWidgets

./: .gitignore  Makefile  README.md  compile_commands.json  meson.build  networkmanager.c  networkmanager.h
scss/: quicksettings.scss  style.scss  theme.scss
src/: main.c  main.h
src/bar/: bar.c  bar.h
src/bar/audio/: audio.c  audio.h
src/bar/battery/: battery.c  battery.h
src/bar/date_time/: date_time.c  date_time.h
src/bar/wifi/: wifi.c  wifi.h  wifi_icon.c  wifi_icon.h
src/bar/workspaces/: workspace_object.c  workspace_object.h  workspaces.c  workspaces.h
src/bluetooth/: adapter.c  adapter.h  bt.c  bt.h  device.c  device.h
src/networking/: networking.c  networking.h
src/quicksettings/: audio_slider.c  audio_slider.h  bluetooth_page.c  bluetooth_page.h  header.c  header.h  page.c  page.h  quicksettings.c  quicksettings.h  togglebutton.c  togglebutton.h  wifi_page.c  wifi_page.h
src/util/: log.h  util.c  util.h
